--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.1'
 	id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
 }
 
 group = 'com.mile.one'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = '18'
 }
 
 configurations {
@@ -18,6 +19,7 @@ configurations {
 }
 
 repositories {
+	maven{ url'https://maven.aliyun.com/nexus/content/groups/public/'}
 	mavenCentral()
 }
 
@@ -26,6 +28,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tasks.named('test') {
