--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+//	implementation 'org.springframework.data:spring-data-geode:2.7.13'
+//	implementation 'org.springframework.shell:spring-shell:3.1.2'
+	implementation "org.springframework.data:spring-data-geode:2.7.13"
+	runtimeOnly "org.springframework.shell:spring-shell:1.2.0.RELEASE"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
