--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.1.1'
 	id 'io.spring.dependency-management' version '1.1.0'
     id 'org.jetbrains.kotlin.jvm' version '1.9.0'
+	id 'io.freefair.lombok' version '6.3.0'
 }
 
 group = 'com.mile.one'
@@ -27,8 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-//	implementation 'org.springframework.data:spring-data-geode:2.7.13'
-//	implementation 'org.springframework.shell:spring-shell:3.1.2'
+
+	implementation "org.springframework.boot:spring-boot-starter-data-rest"
 	implementation "org.springframework.data:spring-data-geode:2.7.13"
 	runtimeOnly "org.springframework.shell:spring-shell:1.2.0.RELEASE"
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
