--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-rest"
 	implementation "org.springframework.data:spring-data-geode:2.7.13"
 	runtimeOnly "org.springframework.shell:spring-shell:1.2.0.RELEASE"
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
